# corsmal_hrh_2026

./: .gitignore  CMakeLists.txt  package.xml
launch/: launch_stuff.launch.py  left_camera_world_calibration.launch.py  right_camera_world_calibration.launch.py
src/: human_robot_handover.cpp
